samples/_failures_safe/1761522262_24857e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_096efd97.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_096efd97.c:155:5: error: expected expression at end of input
  155 |     if (
      |     ^~
./samples/SAFE/__tmp_096efd97.c:155:5: error: expected declaration or statement at end of input
